--- a/assets/templates/Forum Skeleton/AllUsers.cshtml
+++ b/assets/templates/Forum Skeleton/AllUsers.cshtml
@@ -18,9 +18,8 @@
 				<li class="active">All Users</li>
 			</ul>
 			<h1>All Users</h1>
-			<hr />
 			<table class="zebra-striped">
-				<thead>
+				@*<thead>
 					<tr>
 						<th width="10">
 							#
@@ -35,7 +34,7 @@
 						<th>
 						</th>
 					</tr>
-				</thead>
+				</thead>*@
 				<tbody>
 					@for (var i = 1; i < 11; i++)
 		 {
