--- a/assets/templates/Forum Skeleton/UserRecentActivity.cshtml
+++ b/assets/templates/Forum Skeleton/UserRecentActivity.cshtml
@@ -10,10 +10,8 @@
 </head>
 <body>
 	@RenderPage("~/partials/TopBar.cshtml")
-
 	<div class="container-fluid">
 		@RenderPage("~/partials/Sidebar.cshtml")
-
 		<div class="content">
 			<ul class="breadcrumb">
 				<li><a href="Home.cshtml">{Forum Name} Home</a> <span class="divider">/</span></li>
@@ -21,16 +19,45 @@
 				<li><a href="User.cshtml">{Username}</a> <span class="divider">/</span></li>
 				<li class="active">Recent Activity</li>
 			</ul>
-			<h1>{Username}'s Recent Activity</h1>
+			<h1>
+				{Username}'s Recent Activity</h1>
 			<hr />
 			@RenderPage("~/partials/UserProfileTabs.cshtml")
-			<p><small>(User info here.)</small></p>
+			@for (var i = 1; i < 11; i++)
+	 {
+				<div class="row">
+					<div class="span10 offset1">
+						<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
+							float: right; clear: left;">
+							<img src="images/thumb-up.png" /><br />
+							<img src="images/thumb-down.png" /><br />
+							<img src="images/icon_notification_attention.png" /><br />
+						</div>
+						<h2>
+							<a href="Post.cshtml">{Post Title}</a></h2>
+						<p>
+							Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
+							dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
+								font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">
+									Category</a></span></p>
+						<div class="row">
+							<div class="span4">
+								<a class="btn" href="#">Add comment &raquo;</a></div>
+							<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
+								<a href="#">999 comments</a></div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span10 offset1">
+						<hr />
+					</div>
+				</div>
+	 }
 			<footer>
 				<p>&copy; Newco 2011-12</p>
 			</footer>
 		</div>
-
 	</div>
-
 </body>
 </html>
