added user friends screen

--- a/assets/templates/forum-skeleton/ForumSkeletonAzure/csx/Release/roles/ForumSkeletonMvc/approot/Views/RoughDraft/Post.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonAzure/csx/Release/roles/ForumSkeletonMvc/approot/Views/RoughDraft/Post.cshtml
@@ -154,7 +154,7 @@
 						<div class="row">
 
 							<div class="span6 offset3">
-								<p>However, replies to replies are not indented further, they are simply displayed in chronological order. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>However, replies to replies are not indented further, they are simply displayed in chronological order. Comments, regardless of whether or not they are replies, will begin to fade away and eventually disappear altogether if they receive large numbers of downvotes or are frequently reported. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
