--- a/assets/templates/forum-skeleton/ForumSkeletonAzure/csx/Release/roles/ForumSkeletonMvc/approot/Views/RoughDraft/Home.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonAzure/csx/Release/roles/ForumSkeletonMvc/approot/Views/RoughDraft/Home.cshtml
@@ -19,7 +19,7 @@
 			<div class="alert-message block-message warning fade in" data-alert="alert">
 				<a class="close" href="#">×</a>
 				<p class="alert-message-text">
-					<h2>Hello, forum user.</h2>
+					<h2>Welcome, forum user.</h2>
 					This is something a user only needs to see occasionally and can be closed. Duis
 					mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem
 					nec elit.</p>
