--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserFavorites.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserFavorites.cshtml
@@ -26,7 +26,7 @@
 			@for (var i = 1; i < 11; i++)
 	 {
 				<div class="row" style="margin-top: 0px; margin-bottom: 0px;">
-					<div class="span10 offset1">
+					<div class="span10">
 						<p>
 							<strong><a href="@Url.Action("Post")">{Post Title}</a></strong> &ndash; This is a favorite
 							post. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada
