--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserFriends.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserFriends.cshtml
@@ -10,10 +10,8 @@
 </head>
 <body>
 	@RenderPage("~/Views/RoughDraft/partials/TopBar.cshtml")
-
 	<div class="container-fluid">
 		@RenderPage("~/Views/RoughDraft/partials/Sidebar.cshtml")
-
 		<div class="content">
 			<ul class="breadcrumb">
 				<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
@@ -21,15 +19,41 @@
 				<li><a href="@Url.Action("User")">{Username}</a> <span class="divider">/</span></li>
 				<li class="active">Friends</li>
 			</ul>
-			<h1>{Username}'s Friends</h1>
+			<h1>
+				{Username}'s Friends</h1>
 			<hr />
 			@RenderPage("~/Views/RoughDraft/partials/UserProfileTabs.cshtml")
+			<p>{Username} has 8 friends.</p>
+			<table class="zebra-striped">
+				<tbody>
+					@for (var i = 1; i < 9; i++)
+		 {
+						<tr>
+							<td>
+								@i
+							</td>
+							<td>
+								<a href="@Url.Action("User")">
+									<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=40" /></a>
+							</td>
+							<td>
+								<h3>
+									<a href="@Url.Action("User")">{Username}</a></h3>
+							</td>
+							<td>
+								35 posts, 45 comments, 5 favorites
+							</td>
+							<td style="text-align: right;">
+								<a href="#">Add as Friend</a> | <a href="#">View Activity</a>
+							</td>
+						</tr>
+		 }
+				</tbody>
+			</table>
 			<footer>
 				<p>&copy; Newco 2011-12</p>
 			</footer>
 		</div>
-
 	</div>
-
 </body>
 </html>
