--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserRecentActivity.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserRecentActivity.cshtml
@@ -26,7 +26,7 @@
 			@for (var i = 1; i < 11; i++)
 	 {
 				<div class="row">
-					<div class="span10 offset1">
+					<div class="span10">
 						<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
 							float: right; clear: left;">
 							<img src="../../Themes/default/images/thumb-up.png" /><br />
