--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/User.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/User.cshtml
@@ -10,26 +10,39 @@
 </head>
 <body>
 	@RenderPage("~/Views/RoughDraft/partials/TopBar.cshtml")
-
 	<div class="container-fluid">
 		@RenderPage("~/Views/RoughDraft/partials/Sidebar.cshtml")
-
 		<div class="content">
 			<ul class="breadcrumb">
 				<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
 				<li><a href="@Url.Action("AllUsers")">All Users</a> <span class="divider">/</span></li>
 				<li class="active">{Username}</li>
 			</ul>
-			<h1>{Username}'s Profile</h1>
+			<h1>
+				{Username}'s Profile</h1>
 			<hr />
 			@RenderPage("~/Views/RoughDraft/partials/UserProfileTabs.cshtml")
-			<p><small>(User info here.)</small></p>
+			<div class="row">
+				<div class="span3 offset1">
+					<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=150" />
+				</div>
+				<div class="span6">
+					<h3>{Username}</h3>
+					<p>25 badges | 245 points | 465 comments | 3 posts</p>
+					<p>Located in Arlington, Virginia, USA</p>
+					<b>Custom profile fields</b>
+					<ul>
+						<li>Favorite Music: Loud</li>
+						<li>Political Affiliation: Kodos (why vote for the lesser of two evils?)</li>
+					</ul>
+				</div>
+			</div>
+			<p>
+				<small>(User info here.)</small></p>
 			<footer>
 				<p>&copy; Newco 2011-12</p>
 			</footer>
 		</div>
-
 	</div>
-
 </body>
 </html>
