changed user actions

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/AllUsers.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/AllUsers.cshtml
@@ -38,7 +38,7 @@
 								35 posts, 45 comments, 5 favorites
 							</td>
 							<td style="text-align: right;">
-								<a href="#">Add as Friend</a> | <a href="#">View Activity</a>
+								<a href="#">Add as Friend</a>
 							</td>
 						</tr>
 		 }
