--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserFriends.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserFriends.cshtml
@@ -43,8 +43,8 @@
 							<td>
 								35 posts, 45 comments, 5 favorites
 							</td>
-							<td style="text-align: right;">
-								<a href="#">Add as Friend</a> | <a href="#">View Activity</a>
+							<td>
+								<a href="#">Remove as Friend</a>
 							</td>
 						</tr>
 		 }
