--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserRecentActivity.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserRecentActivity.cshtml
@@ -27,23 +27,15 @@
 	 {
 				<div class="row">
 					<div class="span10">
-						<div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px;
-							float: right; clear: left;">
-							<img src="../../Themes/default/images/thumb-up.png" /><br />
-							<img src="../../Themes/default/images/thumb-down.png" /><br />
-							<img src="../../Themes/default/images/icon_notification_attention.png" /><br />
-						</div>
-						<h2>
-							<a href="@Url.Action("Post")">{Post Title}</a></h2>
+						<h3>
+							<a href="@Url.Action("Post")">{Post Title}</a></h3>
 						<p>
 							Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
 							dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
 								font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
 									Category</a></span></p>
 						<div class="row">
-							<div class="span4">
-								<a class="btn" href="#">Add comment &raquo;</a></div>
-							<div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;">
+							<div class="span3 offset7" style="padding-top: 7px; text-align: right; font-size: smaller;">
 								<a href="#">999 comments</a></div>
 						</div>
 					</div>
@@ -53,6 +45,29 @@
 						<hr />
 					</div>
 				</div>
+				
+		 if (i % 2 == 0)
+		 {
+				
+				<div class="row">
+					<div class="span10">
+						<p>
+							Comment on post: <strong style="font-size: 18px"><a href="@Url.Action("Post")">{Post Title}</a></strong>.
+						</p>
+						<p>
+							Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
+							dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
+								font-size: smaller;"><em>12:59 PM 12/31/2011</em></span></p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span10 offset1">
+						<hr />
+					</div>
+				</div>
+		 
+		 }
+
 	 }
 			<footer>
 				<p>&copy; Newco 2011-12</p>
