--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Post.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/Post.cshtml
@@ -7,9 +7,9 @@
 	<meta name="author" content="">
 	@RenderPage("~/Views/RoughDraft/partials/shared/Styles.cshtml")
 	@RenderPage("~/Views/RoughDraft/partials/shared/Scripts.cshtml")
-
 	<style>
-		.comment {
+		.comment
+		{
 			margin-top: 15px;
 			margin-bottom: 15px;
 		}
@@ -17,10 +17,8 @@
 </head>
 <body>
 	@RenderPage("~/Views/RoughDraft/partials/TopBar.cshtml")
-
 	<div class="container-fluid">
 		@RenderPage("~/Views/RoughDraft/partials/Sidebar.cshtml")
-
 		<div class="content">
 			<ul class="breadcrumb">
 				<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
@@ -28,35 +26,42 @@
 				<li><a href="@Url.Action("Category")">{Category}</a> <span class="divider">/</span></li>
 				<li class="active">{Post Name}</li>
 			</ul>
-			<h1>{Post Name}</h1>
-			<hr />
-
+			<h1>
+				{Post Name}</h1>
 			<div class="row">
-
-				<div class="span1" style="margin-left: 35px; margin-right: 0px;">
-					<img src="../../Themes/default/images/thumb-up.png" /><br />
-					<img src="../../Themes/default/images/thumb-down.png" /><br />
-					<img src="../../Themes/default/images/icon_notification_attention.png" /><br />
-				</div>
-
-				<div class="span12" style="margin-left: 0px; margin-right: 0px;">
-					<p>This is the body of the post. Morbi tortor ligula, tempor vitae adipiscing scelerisque,
-						venenatis quis nulla. Class aptent taciti sociosqu ad litora torquent per conubia
-						nostra, per inceptos himenaeos. Duis ac augue urna, fermentum convallis enim. Nulla
-						rutrum placerat eros sit amet dictum. Fusce dolor massa, bibendum posuere elementum
-						ac, consectetur vitae lorem. Fusce nec justo quis ante pellentesque gravida. Etiam
-						a diam quam. Nunc tellus mi, commodo molestie sollicitudin sed, facilisis dictum
-						magna. Pellentesque eros nisl, congue quis consectetur a, tempor rutrum diam. In
-						quam velit, rutrum at tincidunt ut, bibendum commodo elit. In neque velit, fringilla
-						suscipit sollicitudin at, interdum vel est. Nunc sed ipsum nisl.</p>
-					<hr />
-
+				<div class="span16">
 					<div class="row">
-
-						<div class="span6">
-							<h2>Comments</h2>
+						<div class="span12">
+							<p>
+								This is the body of the post. Morbi tortor ligula, tempor vitae adipiscing scelerisque,
+								venenatis quis nulla. Class aptent taciti sociosqu ad litora torquent per conubia
+								nostra, per inceptos himenaeos. Duis ac augue urna, fermentum convallis enim. Nulla
+								rutrum placerat eros sit amet dictum. Fusce dolor massa, bibendum posuere elementum
+								ac, consectetur vitae lorem. Fusce nec justo quis ante pellentesque gravida. Etiam
+								a diam quam. Nunc tellus mi, commodo molestie sollicitudin sed, facilisis dictum
+								magna. Pellentesque eros nisl, congue quis consectetur a, tempor rutrum diam. In
+								quam velit, rutrum at tincidunt ut, bibendum commodo elit. In neque velit, fringilla
+								suscipit sollicitudin at, interdum vel est. Nunc sed ipsum nisl.</p>
 						</div>
-
+					</div>
+					<hr />
+					<div class="row">
+						<div class="span6">
+							<a class="btn large primary" href="@Url.Action("Post")">Add a Comment</a></div>
+						<div class="span6" style="text-align: right;">
+							<a href="#">
+								<img src="../../Themes/default/images/thumb-up.png" /></a>&nbsp;&nbsp;&nbsp; <a href="#">
+									<img src="../../Themes/default/images/thumb-down.png" /></a>&nbsp;&nbsp;&nbsp;
+							<a href="#">
+								<img src="../../Themes/default/images/icon_notification_attention.png" /></a>
+						</div>
+					</div>
+					<hr />
+					<div class="row">
+						<div class="span6">
+							<h2>
+								Comments</h2>
+						</div>
 						<div class="span6">
 							<ul class="pills" style="float: right;">
 								<li class="active"><a href="@Url.Action("Post")">Best</a></li>
@@ -64,469 +69,332 @@
 								<li><a href="@Url.Action("Post")">Newest</a></li>
 							</ul>
 						</div>
-
 					</div>
-
 					<hr style="margin-top: 0px;" />
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 							<div class="span9">
-								<p>Comments are displayed beneath an article according to the selected sort order. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Comments are displayed beneath an article according to the selected sort order.
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset3">
-								<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller; text-align: right;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span6 offset3">
-								<p>Initial replies are indented to indicate hierarchy. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-									amet volutpat.</p>
+								<p>
+									Initial replies are indented to indicate hierarchy. Lorem ipsum dolor sit amet,
+									consectetur adipiscing elit. Pellentesque tristique massa eget est accumsan quis
+									tincidunt libero facilisis. In ac tortor diam, sit amet volutpat.</p>
 							</div>
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset4">
-								<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span6 offset3">
-								<p>However, replies to replies are not indented further, they are simply displayed in chronological order. Comments, regardless of whether or not they are replies, will begin to fade away and eventually disappear altogether if they receive large numbers of downvotes or are frequently reported. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
-									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
-									amet volutpat.</p>
+								<p>
+									However, replies to replies are not indented further, they are simply displayed
+									in chronological order. Comments, regardless of whether or not they are replies,
+									will begin to fade away and eventually disappear altogether if they receive large
+									numbers of downvotes or are frequently reported. Lorem ipsum dolor sit amet, consectetur
+									adipiscing elit. Pellentesque tristique massa eget est accumsan quis tincidunt libero
+									facilisis. In ac tortor diam, sit amet volutpat.</p>
 							</div>
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset4">
-								<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span6 offset3">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset4">
-								<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 							<div class="span9">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset3">
-								<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller; text-align: right;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 							<div class="span9">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset3">
-								<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller; text-align: right;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 							<div class="span9">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset3">
-								<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller; text-align: right;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 							<div class="span9">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset3">
-								<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller; text-align: right;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span6 offset3">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset4">
-								<p style="font-size: smaller;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 							<div class="span9">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset3">
-								<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller; text-align: right;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="comment">
-
 						<div class="row">
-
 							<div class="span3">
-
 								<div class="row">
-
 									<div class="span1" style="margin-top: 4px;">
 										<a href="@Url.Action("User")">
 											<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=30" /></a>
 									</div>
-
 									<div class="span2" style="margin-left: 0px;">
 										<a href="@Url.Action("User")">Username</a><br />
 										<small style="font-size: smaller;">About an hour ago</small>
 									</div>
-
 								</div>
-
 							</div>
-
 							<div class="span9">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
-
 						</div>
-
 						<div class="row">
-
 							<div class="span8 offset3">
-								<p style="font-size: smaller; text-align: right;"><a href="@Url.Action("Post")">Reply</a></p>
+								<p style="font-size: smaller; text-align: right;">
+									<a href="@Url.Action("Post")">Reply</a></p>
 							</div>
-
 						</div>
-
 					</div>
-
 					<div class="row">
-
 						<div class="span9 offset3">
 							<hr />
 							<a class="btn primary" href="@Url.Action("Post")">Reply</a>
 						</div>
-
 					</div>
-
 				</div>
-
-		</div>
-
-		<footer>
+			</div>
+			<footer>
 			<p>&copy; Newco 2011-12</p>
 		</footer>
-	</div>
-
+		</div>
 	</div>
 </body>
 </html>
