fixed new post button

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/NewPost.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/NewPost.cshtml
@@ -1,17 +1,3 @@
-﻿<div id="newPost" class="row">
-	<div class="span3">
-		<form>
-		<div class="inline-inputs">
-			<select class="input-small" style="font-size: small;">
-				<option>Category</option>
-				<option>Another Category</option>
-				<option>Creative Category</option>
-				<option>Unmoderated Forum</option>
-				<option>Placeholder Category</option>
-				<option>Example Category</option>
-			</select>
-			<input type="button" class="btn primary" value="Create Post" />
-		</div>
-		</form>
-	</div>
+﻿<div id="newPost" style="text-align: center;">
+		<input type="button" class="btn medium primary" value="Create Post" />
 </div>
